Fix #8537 - display conversation when zooming (#8558)
* Fix #8537 - remove background property

To avoid border issues when zooming on Chrome

* Fix #8537 - composer border bug when zooming

* Fix #8537 - overlap sender/labels

--- a/src/sass/components/composer/composer.scss
+++ b/src/sass/components/composer/composer.scss
@@ -41,8 +41,12 @@
         background:$white;
         will-change: transform;
 
-        header, footer, .row {
-          line-height: $composerRowHeight;
+        header, footer {
+            line-height: $composerRowHeight;
+        }
+
+        .row {
+            line-height: #{$composerRowHeight+1px}; // fixes a zoom bug for Chrome
         }
 
         .composer-meta:not(.composer-toggle-ccbcc) .ccRow,
